  icmake's option --icm-dep (-d)

 * Icmake supports several long options in addition to the standard short
   options. See icmake(1) for details.

* Changed references to IS_* into O_* in icmake(1)'s man-page. The IS_ entries
  were already unavailable, but the man-page still referred to them. Now
  fixed. 

 * Contents of lines in CLASSES beyond the first word are no longer
   interpreted.

 * Option -b was removed from icmake.

 * The built-in function makelist(mask, [younger,older], referencefile) is now
   operational (was mentioned in icmake's man-page, but wasn't implemented
   before).

 * Repaired a bug in substr that could segfault.

 * Man-pages updated. Icmbuild(1) contains a description of the icm-dep
   program. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 May 2016 17:23:18 +0200

icmake (8.01.00)

* Added builtin functions 'strchr', 'listfind', and 'listunion'. See 'man
   icmake' for details.

* Fixed a bug in icmake's option handling due to which options could not be 
  forwarded to called scripts.

* Fixed a bug in the compilation of ternary expressions: the condition wasn't
  explicitly converted to bool, causing constructions like 'ret = fun() ? ...'
  to fail.

* The 'icmstart' script was modified, improving control over which files
  should initially be installed (see 'man icmstart' and 'man icmstart.rc' for
  details. 

* Icmake's predefined function stat(P_NOCHECK, entry) returns, if `entry'
  does not exist, a list having two elements: list[0] == 0, list[1] == -1.

* The builtin function 'getch()' now prints one newline character when the
  user presses 'Enter' (previously 2 newlines were printed).

* The main() function must have return type 'void' (this was already required
  in earlier versions, but is now enforced).

* When defining executable icmake scripts using 
        #!/usr/bin/icmake -t
  -t. indicates that the temporary .bim file must be defined in icmake's