@@ -14,6 +14,8 @@ icmake (9.00.00)
  * Contents of lines in CLASSES beyond the first word are no longer
    interpreted.
 
+ * Added new option NO_PRECOMP_WARNING to icmconf
+
  * Option -b was removed from icmake.
 
  * The built-in function makelist(mask, [younger,older], referencefile) is now
@@ -25,7 +27,7 @@ icmake (9.00.00)
  * Man-pages updated. Icmbuild(1) contains a description of the icm-dep
    program. 
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 May 2016 17:23:18 +0200
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 23 Jul 2016 20:55:33 +0200
 
 icmake (8.01.00)
 
